--- a/JS/类型，值和变量.md
+++ b/JS/类型，值和变量.md
@@ -16,41 +16,41 @@
 
 3，算术运算符
 
-> 简单运算符包含： +（加），-（减），*（乘），/（除），%（求余）
-复杂运算符：
-通过Math对象属性来定义
-Math.pow(2,10)  // 2的10次幂
-Math.round(.6) // 四舍五入
-Math.ceil(.6) // 向上求整
-Math,floor(.6) // 向下求整
-Math.abs(-5) // 求绝对值
-Math.max(x,y,z) //求最大值
-Math.min(x,y,z) //求最小值
-Math.random(11) // 生成随机数
-Math.PI //圆周率
-Math.E // 自然对数的底数
-Math.sqrt() // 求平方根
-Math.sin() // 三角函数
-Math.log() // 自然对数
-Math.log(100)/Math.LN10 // 以10为底100的对数
-Math.exp(3) // e的三次幂
-注：
-JavaScript中非数字值它和任何值都不等，也包括本身，正负0也非常特殊，0和-0是相等的
+    简单运算符包含： +（加），-（减），*（乘），/（除），%（求余）
+    复杂运算符：
+    通过Math对象属性来定义
+    Math.pow(2,10)  // 2的10次幂
+    Math.round(.6) // 四舍五入
+    Math.ceil(.6) // 向上求整
+    Math,floor(.6) // 向下求整
+    Math.abs(-5) // 求绝对值
+    Math.max(x,y,z) //求最大值
+    Math.min(x,y,z) //求最小值
+    Math.random(11) // 生成随机数
+    Math.PI //圆周率
+    Math.E // 自然对数的底数
+    Math.sqrt() // 求平方根
+    Math.sin() // 三角函数
+    Math.log() // 自然对数
+    Math.log(100)/Math.LN10 // 以10为底100的对数
+    Math.exp(3) // e的三次幂
+    注：
+    JavaScript中非数字值它和任何值都不等，也包括本身，正负0也非常特殊，0和-0是相等的
 
 4，二进制浮点数和四舍五入错误
 
 5，日期和时间
 
-> JavaScript包含Date构造函数，用它来创建表示日期和时间对象
-new Date() 当前日期时间
-getFullYear //年
-getMonth //月
-getDate //日
-getDay //天
-getHours // 时
-getMinutes // 分
-getSeconds //秒
-getUTCHours //utc表示时间  时区
+    JavaScript包含Date构造函数，用它来创建表示日期和时间对象
+    new Date() 当前日期时间
+    getFullYear //年
+    getMonth //月
+    getDate //日
+    getDay //天
+    getHours // 时
+    getMinutes // 分
+    getSeconds //秒
+    getUTCHours //utc表示时间  时区
 
 6，文本
 
@@ -69,59 +69,59 @@ getUTCHours //utc表示时间  时区
 
 9，字符串的使用
 
-> 字符串length来确认字符的长度
-var msg = "hello,now"
-msg.charAt(0) //第一个字符
-msg.charAt(msg.length-1)  // 最后一个字符
-msg.substring(1,3) // 第二个到第三个字符
-msg.slice(1,3) // 第二个到第三个字符
-msg.slice(-3) // 最后三个字符
-msg.indexOf("l") // l字母首次出现的位置
-msg.lastIndexOf("l") //l字母最后出现的位置
-msg.indexOf("l",3) // 在位置3之后出现字符串了的位置
-msg.split(',') // 分割字符串为[]
-msg.replace("h","H") // 字符串替换
-msg.toUpperCase() // 大写转换
-注：
-JavaScript字符串不是固定不变的，replace，toUpperCase返回的时新字符串，而原始字符串本身没改变；
-字符串可当作只读数组，除了charAt()外  var m = "aaaBBB"  console.log(m[1])
+    字符串length来确认字符的长度
+    var msg = "hello,now"
+    msg.charAt(0) //第一个字符
+    msg.charAt(msg.length-1)  // 最后一个字符
+    msg.substring(1,3) // 第二个到第三个字符
+    msg.slice(1,3) // 第二个到第三个字符
+    msg.slice(-3) // 最后三个字符
+    msg.indexOf("l") // l字母首次出现的位置
+    msg.lastIndexOf("l") //l字母最后出现的位置
+    msg.indexOf("l",3) // 在位置3之后出现字符串了的位置
+    msg.split(',') // 分割字符串为[]
+    msg.replace("h","H") // 字符串替换
+    msg.toUpperCase() // 大写转换
+    注：
+    JavaScript字符串不是固定不变的，replace，toUpperCase返回的时新字符串，而原始字符串本身没改变；
+    字符串可当作只读数组，除了charAt()外  var m = "aaaBBB"  console.log(m[1])
 
 10，模式匹配
 
-> JavaScript定义了RegExp构造函数，用来创建表示文本匹配模式的对象，俗称正则表达式
-/[0-9][1-9]*/ // 匹配非零数字
-/\d+/g // 匹配包含一个或者多个数字
-var tet = "111jjjssss"
-tet.search() // 首次匹配成功出现的位置
-tet.macth()  // 所有匹配成功的数组
-tet.replace(正则,"#") // 替换匹配成功位置值
-tet.split(正则) // 截取字符
+    JavaScript定义了RegExp构造函数，用来创建表示文本匹配模式的对象，俗称正则表达式
+    /[0-9][1-9]*/ // 匹配非零数字
+    /\d+/g // 匹配包含一个或者多个数字
+    var tet = "111jjjssss"
+    tet.search() // 首次匹配成功出现的位置
+    tet.macth()  // 所有匹配成功的数组
+    tet.replace(正则,"#") // 替换匹配成功位置值
+    tet.split(正则) // 截取字符
 
 11，布尔值
 
-> 真或假，是或否，此类型只有true和false两个值
-&&运算符执行了与（||）的逻辑，仅当两个操作数都返回是真数，它才会返回true
-||或操作，当中有一个为真就返回true
-if((x == 0 && y == 1) || !( == 100))
+     真或假，是或否，此类型只有true和false两个值
+    &&运算符执行了与（||）的逻辑，仅当两个操作数都返回是真数，它才会返回true
+    ||或操作，当中有一个为真就返回true
+    if((x == 0 && y == 1) || !( == 100))
 
 12，null和undefined
 
-> null是JavaScript关键字，一个特殊的值即：空值   typeof 是object 特殊的对象值非对象
-undefined是预定义的全局变量，非关键字 typeof undefined返回undefined 原始类型值就是undefined
-7
+    null是JavaScript关键字，一个特殊的值即：空值   typeof 是object 特殊的对象值非对象
+    undefined是预定义的全局变量，非关键字 typeof undefined返回undefined 原始类型值就是undefined
+
 13，全局对象
 
-> JavaScript解释器启动时就会创建一个全新的全局对象，并给初始值
-全局属性：undefined，NaN
-全局函数：isNaN()，parseInt()
-构造函数：Date()，RegExp()，String()，Object()，Array()
-全局对象：Math，JSON
+    JavaScript解释器启动时就会创建一个全新的全局对象，并给初始值
+    全局属性：undefined，NaN
+    全局函数：isNaN()，parseInt()
+    构造函数：Date()，RegExp()，String()，Object()，Array()
+    全局对象：Math，JSON
 
 14，包装对象
 
-> 复合值，包含属性和属性值
-注：字符串不是对象，但只要引用了字符串的属性，JavaScript就会把字符串值通过调用new String(字符串值)方式转为对象，并且继承了字符串的方法
-null和undefined没有包装对象
+    复合值，包含属性和属性值
+    注：字符串不是对象，但只要引用了字符串的属性，JavaScript就会把字符串值通过调用new String(字符串值)方式转为对象，并且继承了字符串的方法
+    null和undefined没有包装对象
 
 15，不可改变的原始值和可改变的对象引用
 
@@ -154,3 +154,5 @@ toString和valueOf都不能返回一个原始值，此时会报错
 变量声明木有指定数据类型，JavaScript申明变量可为任何数据类型
 
 21，变量的作用域
+
+> 函数体内部变量优先级，函数内部的变量大于全局变量，重名的话全局变量会被局部的覆盖
