--- a/JS/词法结构.md
+++ b/JS/词法结构.md
@@ -30,33 +30,33 @@
 
 7，标识符和保留字
 
-> 标识符：
-标识符是一个名字（好比人名字），在JavaScript中的标识符：变量名，函数名，某些循环语句中的跳转位置标记(譬如：return)。注：标识符必须以 **字母，下划线，$开头**
-一些合法的标识符：i， $jq ，_str
-保留字：JavaScript里面把一些标识符用作自己的关键字
-break，return，delete，function，typeof，if，var，null，for，viod，false，true ....、
-暴露了一些关键字：
-class，const，let，export，import ....
-注：
-严格模式下arguments，eval不完全是保留字，但也不能把他们用作 *变量，函数，参数名*
+    标识符：
+    标识符是一个名字（好比人名字），在JavaScript中的标识符：变量名，函数名，某些循环语句中的跳转位置标记(譬如：return)。注：标识符必须以 **字母，下划线，$开头**
+    一些合法的标识符：i， $jq ，_str
+    保留字：JavaScript里面把一些标识符用作自己的关键字
+    break，return，delete，function，typeof，if，var，null，for，viod，false，true ....、
+    暴露了一些关键字：
+    class，const，let，export，import ....
+    注：
+    严格模式下arguments，eval不完全是保留字，但也不能把他们用作 *变量，函数，参数名*
 
 **每个特定的JavaScript运行环境（客户端，服务端）都有自己的一个全局属性列表**
 
 8，可选的分号
 
-> 这个可不需要，但需要分在什么情况，
-var a = 3
-var b = 4
-以上这种情况则不需要加也可以
-var a = 3 var b = 4 //这样会报错Uncaught SyntaxError: Unexpected token 'var'
-此种形式需要加在= 3后加;分号
-譬如下面代码：
-var x=9; var y=10; var a=1; var b=8;
-var aa = x+y
-(a+b).toStriong() // 报错：VM4328:2 Uncaught TypeError: y is not a function
-解析上面代码时候会把代码看成 var aa = x + y(a+b).toString()
-**如果一条一句以(，[，/，+，-开始，它很有可能会以上一条语句合并解析，在上一句木有分号的前提下，但是如果上下语句无法合并解析，则会在上一语句加分号；也有列外：比如涉及到return，break，continue和++和--** 譬如：
-x
-++
-y
-解析为x;++y
+    这个可不需要，但需要分在什么情况，
+    var a = 3
+    var b = 4
+    以上这种情况则不需要加也可以
+    var a = 3 var b = 4 //这样会报错Uncaught SyntaxError: Unexpected token 'var'
+    此种形式需要加在= 3后加;分号
+    譬如下面代码：
+    var x=9; var y=10; var a=1; var b=8;
+    var aa = x+y
+    (a+b).toStriong() // 报错：VM4328:2 Uncaught TypeError: y is not a function
+    解析上面代码时候会把代码看成 var aa = x + y(a+b).toString()
+    **如果一条一句以(，[，/，+，-开始，它很有可能会以上一条语句合并解析，在上一句木有分号的前提下，但是如果上下语句无法合并解析，则会在上一语句加分号；也有列外：比如涉及到return，break，continue和++和--** 譬如：
+    x
+    ++
+    y
+    解析为x;++y
