--- a/JS/类型，值和变量.md
+++ b/JS/类型，值和变量.md
@@ -156,3 +156,27 @@ toString和valueOf都不能返回一个原始值，此时会报错
 21，变量的作用域
 
 > 函数体内部变量优先级，函数内部的变量大于全局变量，重名的话全局变量会被局部的覆盖
+
+22，函数作用域和申明提前
+
+>  JavaScript木有块级作用域，但使用了函数作用域，变量在申明的函数体内是由定义的；JavaScript函数作用域是函数内申明的所有变量在函数体内是可用的，注意：在申明之前就可用，这就是申明提前（不包含赋值）。【这是由于JavaScript引擎预编译时进行的】
+
+    var test = "输出值"
+    function first(){
+        console.log(test) // undefined
+        var test = "在这里输出值"
+        console.log(test) // 输出————在这里输出值
+    }
+    first()
+    注：函数作用域的原因，变量在函数内部始终是有定义的，如果变量与全局变量同名则会覆盖全局，而且只有在有执行到var时局部变量才会真正的赋值，上述代码只是把变量申明提前了的结果
+
+23，作为属性的变量
+
+> JavaScript全局变量是全局对象的属性，而局部变量却木有
+
+24，作用域链
+
+    在JavaScript最顶层代码中（不包含在任何函数定义内的代码），作用域链由全局对象构成，在不包含嵌套的函数体内，作用域链上有两个对象，一个是定义函数的参数和函数局部变量，另一个是全局对象。
+    在嵌套函数体内，作用域链至少有三个对象
+    定义一个函数，此函数就保存了一个作用域链，当调用此函数时又会创建新的对象来存储内部变量，并把这个作用域链添加到保存的作用域链，同时创建了一个新的更长的表示函数调用作用域链
+    嵌套函数每次调用外部函数时，内部函数会重新定义一遍。所有每次调用外部函数的作用域链都是不同的
